# firewheel_clap_node

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/firewheel_clap_node/: Cargo.toml
crates/firewheel_clap_node/src/: clap_plugin.rs  lib.rs
crates/test_plugins/test_plugin_basic/: Cargo.toml
examples/basic_usage/: Cargo.toml  README.md
examples/basic_usage/src/: main.rs
examples/bevy_example/: Cargo.toml
examples/bevy_example/src/: main.rs
examples/plugins/delay_plugin/: Cargo.toml
examples/plugins/delay_plugin/src/: lib.rs
