[package]
name = "firewheel_clap_node"
version = "0.1.0"
edition = "2024"

[dependencies]
firewheel-core = { git = "https://github.com/IRSMsoso/Firewheel", branch = "fallible-node-construction" }
clack-host = { git = "https://github.com/prokopyl/clack", rev = "f53f8fc132c001a332c0a7221267812dfb654e92" }
clack-extensions = { git = "https://github.com/prokopyl/clack", rev = "f53f8fc132c001a332c0a7221267812dfb654e92", features = ["log", "clack-host", "audio-ports"]}
log = "0.4.29"
thiserror = "2.0.18"