[package]
name = "basic_usage"
version = "0.1.0"
edition = "2024"

[dependencies]
firewheel_clap_node = { path = "../../crates/firewheel_clap_node" }
firewheel = { git = "https://github.com/IRSMsoso/Firewheel", branch = "fallible-node-construction" }
symphonium = { version = "0.7.0", features = ["mp3", "flac"] }