[package]
name = "delay_plugin"
version = "0.1.0"
edition = "2024"

[lib]
name = "delay_plugin"
crate-type = ["cdylib"]

[dependencies]
parking_lot = "0.12.5"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95", features = ["assert_process_allocs"] }
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug" }